--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-ess
-.htaccess
-webroot/.htaccess
+app/.htaccess
+app/webroot/.htaccess
 
 # config
-config/core.php
-config/database.php
+app/config/core.php
+app/config/database.php
 
 # cache
-tmp/cache/
-tmp/cache/models/
-tmp/cache/persistent/
-tmp/cache/views/
+app/tmp/cache/
+app/tmp/cache/models/
+app/tmp/cache/persistent/
+app/tmp/cache/views/
 
 !empty
 
