--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,15 @@ app/.htaccess
 app/webroot/.htaccess
 
 # config
+app/config/bootstrap.php
 app/config/core.php
 app/config/database.php
 
 # cache
-app/tmp/cache/
-app/tmp/cache/models/
-app/tmp/cache/persistent/
-app/tmp/cache/views/
+app/tmp/**/*
+app/webroot/tmp/*
+cakephp
+cakephp/*/**
 
 !empty
 
