--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/plugins/lazy_model"]
 	path = app/plugins/lazy_model
 	url = https://github.com/Phally/lazy_model.git
+[submodule "app/plugins/debug_kit"]
+	path = app/plugins/debug_kit
+	url = https://github.com/cakephp/debug_kit.git
