--- a/app/config/core.php.sample
+++ b/app/config/core.php.sample
@@ -16,6 +16,13 @@
 
 	Configure::write('Security.hash', 'sha1');
 
+	// Site Theme
+	// Configure::write('Site.theme', 'default');
+
+	// Mobile themes
+	Configure::write('Site.mobile_theme', 'mobile');
+	Configure::write('Site.jquery_mobile_theme', 'b');
+
 /**
  * CakePHP Log Level:
  *
