--- a/android/Boxmeupapp/AndroidManifest.xml
+++ b/android/Boxmeupapp/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.boxmeup.app"
 	android:versionCode="1"
-      android:versionName="1.0">
+    android:versionName="1.0">
+	<uses-sdk  
+		android:minSdkVersion="8"
+		android:targetSdkVersion="8"/>
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application>
+	<application android:label="@string/app_name"
+				 android:icon="@drawable/icon">
 		<activity android:name="MainActivity"
-			android:label="@string/app_name"
-			android:icon="@drawable/icon"
-			android:theme="@android:style/Theme.NoTitleBar">
+			android:theme="@android:style/Theme.NoTitleBar"
+			android:configChanges="keyboardHidden|orientation">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 				<category android:name="android.intent.category.LAUNCHER"/>
