Updated sphinxsearch config to remove un-used table column.

--- a/config/sphinx.conf
+++ b/config/sphinx.conf
@@ -14,13 +14,13 @@ source container_items
 
 	sql_query_pre = SET NAMES utf8
 	sql_query_pre = REPLACE INTO sphinx_counters SELECT 2, MAX(id) FROM container_items
-	sql_query = SELECT container_items.id AS id, containers.user_id AS user_id, container_id, container_items.tag_id AS tag_id, container_items.uuid AS uuid, body, container_items.created AS created, container_items.modified AS modified FROM container_items INNER JOIN containers ON containers.id = container_items.container_id
+	sql_query = SELECT container_items.id AS id, containers.user_id AS user_id, container_id, container_items.uuid AS uuid, body, container_items.created AS created, container_items.modified AS modified FROM container_items INNER JOIN containers ON containers.id = container_items.container_id
 
 	sql_attr_uint = container_id
 	sql_attr_uint = user_id
 	sql_attr_timestamp = created
 
-	sql_query_info = SELECT container_items.id AS id, containers.user_id AS user_id, container_id, container_items.tag_id AS tag_id, container_items.uuid AS uuid, body, container_items.created AS created, container_items.modified AS modified FROM container_items INNER JOIN containers ON containers.id = container_items.container_id WHERE container_items.id=$id
+	sql_query_info = SELECT container_items.id AS id, containers.user_id AS user_id, container_id, container_items.uuid AS uuid, body, container_items.created AS created, container_items.modified AS modified FROM container_items INNER JOIN containers ON containers.id = container_items.container_id WHERE container_items.id=$id
 }
 
 ## Delta sources
@@ -28,7 +28,7 @@ source container_items
 source container_items_delta : container_items
 {
 	sql_query_pre = SET NAMES utf8
-	sql_query = SELECT container_items.id AS id, containers.user_id AS user_id, container_id, container_items.tag_id AS tag_id, container_items.uuid AS uuid, body, container_items.created AS created, container_items.modified AS modified FROM container_items INNER JOIN containers ON containers.id = container_items.container_id AND container_items.id>( SELECT max_doc_id FROM sphinx_counters WHERE counter_id=2 )
+	sql_query = SELECT container_items.id AS id, containers.user_id AS user_id, container_id, container_items.uuid AS uuid, body, container_items.created AS created, container_items.modified AS modified FROM container_items INNER JOIN containers ON containers.id = container_items.container_id AND container_items.id>( SELECT max_doc_id FROM sphinx_counters WHERE counter_id=2 )
 }
 
 #-------------------------------------------------------------------------------
