Updated mobile views so that quantity inputs will trigger the numeric keyboard on mobile devices.  Moved cakephp submodule to my fork until my pull request is accepted.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "cakephp"]
 	path = cakephp
-	url = https://github.com/cakephp/cakephp.git
+	url = https://github.com/cjsaylor/cakephp.git
 [submodule "app/plugins/lazy_model"]
 	path = app/plugins/lazy_model
 	url = https://github.com/Phally/lazy_model.git
