--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/cakephp/cakephp.git
 [submodule "app/Plugin/DebugKit"]
 	path = app/Plugin/DebugKit
-	url = https://github.com/cakephp/debug_kit.git
+	url = git://github.com/cakephp/debug_kit.git
