Fixed autocomplete search.

--- a/config/sphinx.conf
+++ b/config/sphinx.conf
@@ -41,6 +41,8 @@ index container_items
 	path = /var/sphinxsearch/container_items
 	docinfo = extern
 	charset_type = utf-8
+	min_prefix_len = 4
+	enable_star = 1
 }
 
 index container_items_delta : container_items
