Added 2.0 build script and updated readme.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ app/Config/bootstrap.php
 app/Config/core.php
 app/Config/database.php
 
+# Build config
+config/bootstrap.php
+config/core.php
+config/database.php
+
 # cache
 app/tmp/**/*
 app/webroot/tmp/*
