Added gchart helper submodule from supported repo.  Removed old gchart helper in favor of the plugin.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/Plugin/DebugKit"]
 	path = app/Plugin/DebugKit
 	url = git://github.com/cakephp/debug_kit.git
+[submodule "app/Plugin/GChart"]
+	path = app/Plugin/GChart
+	url = git@github.com:cjsaylor/Google-visualization-api-cakephp.git
