Removed old style configuration in favor of environment based.
Single file is used to configure entire app instead of having three
distinct configuration files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,11 @@
 app/Vendor/
 
 # config
-app/Config/bootstrap.php
-app/Config/core.php
-app/Config/database.php
-
-# Build config
-config/bootstrap.php
-config/core.php
-config/database.php
+app/Config/environment.php
 
 # cache
 app/tmp/**/*
 app/webroot/tmp/*
-
-# misc
-cakephp/
-cakephp/*/**
 
 !empty
 
