--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
 		"bootstrap-sass-official": "~3.2.0",
 		"html5-boilerplate": "~4.3.0",
 		"requirejs": "~2.1.9",
-		"requirejs-text": "~2.0.10"
+		"requirejs-text": "~2.0.10",
+		"lodash": "~2.4.1"
 	}
 }
