--- a/composer.json
+++ b/composer.json
@@ -18,19 +18,11 @@
 		"silex/silex": "~1.0",
 		"silex/web-profiler": "~1.0",
 		"doctrine/dbal": "~2.2",
-		"symfony/browser-kit": "~2.3",
 		"symfony/class-loader": "~2.3",
-		"symfony/config": "~2.3",
-		"symfony/css-selector": "~2.3",
 		"symfony/debug": "~2.3",
-		"symfony/finder": "~2.3",
-		"symfony/form": "~2.3",
 		"symfony/monolog-bridge": "~2.3",
-		"symfony/process": "~2.3",
 		"symfony/security": "~2.3",
-		"symfony/translation": "~2.3",
-		"symfony/twig-bridge": "~2.3",
-		"symfony/validator": "~2.3"
+		"symfony/twig-bridge": "~2.3"
 	},
 	"autoload": {
 		"psr-4": {
