--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "author": "Chris Saylor <cjsaylor@gmail.com>",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-compass": "0.6.x",
+    "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-requirejs": "~0.4.4"
   }
 }
