Updated rewrites to include built files properly.

--- a/site-cookbooks/boxmeup/files/default/boxmeup_nginx.conf
+++ b/site-cookbooks/boxmeup/files/default/boxmeup_nginx.conf
@@ -4,15 +4,9 @@ server {
     root /vagrant/web;
     index index.php;
 
-    location /js/ {
-        rewrite ^js/build_.*\.js$ /js/build.js
-    }
-
-    location /css/ {
-        rewrite ^css/app_.*\.css$ /css/app.css
-    }
-
     location / {
+        rewrite ^/js/build_.*\.js$ /js/build.js last;
+        rewrite ^/css/app_.*\.css$ /css/app.css last;
         try_files $uri $uri/ /index.php?args;
         if (!-e $request_filename) {
             rewrite ^/(.*)$ /index.php last;
