Move composer install into the container.
This necessitated installing some additional php extensions (gd for the
QR lib and zip for composer).

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,9 @@
-contrib
+vendor
 .bowerrc
 .gitignore
 .env
 .travis.yml
 bower.json
-composer.json
-composer.lock
 CONTRIBUTING.md
 gruntfile.js
 jshint.json
