--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,4 @@ before_script:
 
 script: ./node_modules/.bin/grunt ci
 
-after_success:
-  - npm i -g bower
-  - bower install
-  - gem install compass
-  - ./node_modules/.bin/grunt build
-  - docker build -q -t cjsaylor/boxmeup .
-  - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - docker push cjsaylor/boxmeup
+after_success: ./contrib/deploy.sh
